--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "globals": "^15.2.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
-    "vite": "^5.2.11",
-    "vite-plugin-compression": "^0.5.1"
+    "vite": "^5.2.11"
   }
 }
